hermes_fuzz_executed/fuzz_93_execution
'use strict';
console.log(objectLiteral.foo);
'use strict';
console.log(f);
```
```console
 1
 3
TypeError: 1 + 2 is not a function
```

## Usage

```sh
> hermes myapp.js
<generated code>
> node myapp.js
1
3
```



Execution Output ------------------:
test.js:6:4: error: ';' expected
```console
   ^
